# gpu-bench

./: .gitignore  Cargo.toml  README.md  TODO  bug.cu  cublas_xxx.old  matmul.py  matmul_f64.py  matmul_kernel.ptx  plot.py  test.cu
benches/: basics.rs  cublas.rs  cublas_u14.rs  cublas_u16.rs  custom_kernel.rs  custom_kernel_2d.rs  custom_kernel_triton.rs  engines.rs  matmul.rs
experiments/: cublas.rs  custom_kernel.rs
plots/: bench_4090.txt  bench_h100.txt  h100_2703.txt
src/: kernel.cu  lib.rs  main.rs  matmul.rs  ring.rs
