[package]
name = "gpu-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarc = "0.10.0"
rand = "0.8.5"
ndarray = "0.15.3"
rayon = "1.5.1"

[dev-dependencies]
criterion = { version = "0.4"}
ndarray = "0.15.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

#[[bench]]
#name = "custom_kernel"
#harness = false

#[[bench]]
#name = "custom_kernel_triton"
#harness = false

#[[bench]]
#name = "cublas"
#harness = false

#[[bench]]
#name = "custom_kernel_2d"
#harness = false

[[bench]]
name = "cublas_u16"
harness = false
