[package]
name = "gpu-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarc = {git = "https://github.com/coreylowman/cudarc.git", features = ["cuda-12010"]}
rand = "0.8.5"
ndarray = "0.15.3"
rayon = "1.5.1"
num-traits = "0.2"
hex = "0.4.3"
serde = "1.0.198"
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
once_cell = "1.19.0"
reqwest = "0.12.4"
eyre = "0.6.12"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"]}
ndarray = "0.15.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

#[[bench]]
#name = "engines"
#harness = false

[[bench]]
name = "matmul"
harness = false

#[[bench]]
#name = "basics"
#harness = false

#[[bench]]
#name = "cublas_u14"
#harness = false